update comments notice for neocities

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -6,14 +6,12 @@ const gitBookUrl = "https://skolomorphic.github.io" + pathName;
 <div id="comments">
     <h1 class="comment-header">Comments</h1>
     <div class="notice">
-        { Astro.url.hostname.includes('neocities') ? 
-            <p>Comments are not available on Neocities due to content restriction policies.</p>
-            <p>If you'd like to share your thoughts or ask a question, you can email me at 
-                <a>skolomorphic@protonmail.com</a>, visit me on <a href="http://skolomorphic.tumblr.com/">tumblr</a>, 
-                or visit the mirrored page on <a href={gitBookUrl}>Github Books</a>.</p>
-            :
-            <p>Hi! If you'd like to share your thoughts or ask a question, you can email me at <a>skolomorphic@protonmail.com</a>, visit me on <a href="http://skolomorphic.tumblr.com/">tumblr</a>, or leave a comment below.</p>
-        }
+        <p>Hi! If you'd like to share your thoughts or ask a question, you can email me at 
+            <a>skolomorphic@protonmail.com</a>, visit me on <a href="http://skolomorphic.tumblr.com/">tumblr</a>, 
+            or leave a comment below.</p>
+        <p>Please note that <strong>likes & comments do not work on the neocities mirror of my website</strong>
+        due to content restriction policies. If you are visiting this pagefrom neocities, you can comment on
+        the <a href={gitBookUrl}>Github Books</a> page instead.</p>
         <p>I look forward to hearing from you.</p>
         <p>Thanks for visiting my page!</p>
     </div>
