--- a/src/pages/credits.astro
+++ b/src/pages/credits.astro
@@ -4,8 +4,9 @@ const pageTitle = "Index";
 ---
 <InsectSplashLayout pageTitle={pageTitle}>
   <h2>Credits</h2>
-  <p>This website was made with the Astro static site generator framework and deployed via Github Books. Comments are powered by Cusdis.</p>
-  <p>Other resources that I used to build this website:</p>
+  <p>This website was made with the Astro static site generator framework and deployed via Github Books.</p>
+  <p>This is a Frankenstein of all kinds of tutorials on the web. Every wheel on the internet has been reinvented at least thrice.</p>
+  <p>Here's a list of helpful tutorials I used in the construction of my website.</p>
   <ul>
     <li>Google Fonts</li>
     <li><a href="https://kayleerowena.com/blog/2025/code-template/#top">Portfolio Template</a> by Kaylee Rowena</li>
@@ -15,5 +16,6 @@ const pageTitle = "Index";
     <li><a href="https://petrapixel.neocities.org">Coding Tutorials</a> by PetraPixel</li>
     <li><a href="https://codepen.io/ravid7000/pen/ENeaRM">Pure CSS Navigation</a> by Ravi Dhiman</li>
     <li><a href="https://codepen.io/shieldsma91/pen/zLpbLX">Mobile Nav</a> by Mel Shields</li>
+    <li><a href="https://bohemiansultriness.nekoweb.org/siteinfo.html#tutorials">Simple Like Button</a> by BohemianSultriness</li>
   </ul>
 </InsectSplashLayout>
