--- a/src/components/TocNavbar.astro
+++ b/src/components/TocNavbar.astro
@@ -10,6 +10,7 @@ export async function getStaticPaths() {
 }
 
 const collection = await getCollection(collectionName);
+collection.sort((a, b) => a.chapter - b.chapter);
 ---
 { collectionName && 
 <div id="menuToggle">
