edit bound prophet desc

--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -28,7 +28,7 @@ html.dark {
     --text-body: #000;
     --accent-shadow: #0c7f5b;
     --accent-dark: #44b686;
-    --accent-midtone: #496539;
+    --accent-midtone: #5d8845;
     --accent-contrast-dark: #461905;
     --accent-contrast-light: #bd5224;
     --accent-light: #103d2a;
