update index page info

--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -12,13 +12,19 @@ const arcOrganization = await getCollection('poeArcs');
 <BookLayout frontmatter={frontmatter}>
     <blockquote><i>In my dreams, everything was burning. A voice was calling out for me.</i></blockquote>
 
-    <p>Summoned forth as the intended sacrifice of a mysterious ritual, a young man finds himself in a dangerous new world with the face of his attempted killer, Acacius Duval — but without any of his memories.</p>
+    <p>Summoned forth as the intended sacrifice of a mysterious ritual, a young man finds himself in a new world with the face of his attempted killer, Acacius Duval, as well as a looming death curse if he doesn’t carry out Acacius’ last will. However, while Acacius has left many looming problems, he didn’t leave behind the most important piece: his memories. </p>
 
     <p>That would have been too convenient for navigating a world stitched together from apocalypses. </p>
 
-    <p>Fortunately, after only a few life and death trials, he is sent away to the prestigious Nithemoore Academy, where he can learn everything he needs to know and gain the power to grasp his freedom…</p>
+    <p>Fortunately, after only a few life and death trials, Acacius’ unintentional replacement is sent away to the prestigious Nithemoore Academy, where he can learn everything he needs to know about the world and gain the power to grasp his freedom…</p>
 
-    <p>If the tracks of history don’t doom him first.</p>
+    <p>At least, if the tracks of history don’t doom him first.</p>
+
+    <div class="announcement">
+        <p><b>Updates every Saturday.</b> If we hit the end of the last arc in the backlog, I will go on hiatus until the arc is complete, at which point I will resume my regular posting schedule.</p>
+        <p><b>Want an extra chapter?</b> Donate to the latest <a href="https://kfsfinitiatives.carrd.co/">Gaza campaign by KFSF</a>
+        with a comment! Every $ or # donations milestone, I will post an extra chapter on Wednesday.</p>
+    </div>
 
     <h2>Chapter Index</h2>
     <ol>
