extra chs clarification

--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -23,7 +23,7 @@ const arcOrganization = await getCollection('poeArcs');
     <div class="announcement">
         <p><b>Updates every Saturday.</b> If we hit the end of the last arc in the backlog, I will go on hiatus until the arc is complete, at which point I will resume my regular posting schedule.</p>
         <p><b>Want an extra chapter?</b> Donate to the latest <a href="https://kfsfinitiatives.carrd.co/">Gaza campaign by KFSF</a>
-        with a comment! Every $ or # donations milestone, I will post an extra chapter on Wednesday.</p>
+        with a comment! Every 10 donations or $100 raised, whichever comes first, I will post an extra chapter on Wednesday.</p>
     </div>
 
     <h2>Chapter Index</h2>
