--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,8 @@ h2, h3, h4, h5, h6 {
 }
 
 .container {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
     max-width: 80ch;
     padding: 1rem;
