update index desc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,16 @@ const pageTitle = "Index";
   <p>Thanks for dropping by.</p>
 
   <h2>Updates</h2>
+  <p><b>03.29.2025</b> Various quality of life fixes! Added dark mode toggle, reader controls, 
+    novel table of contents, mobile support, and other features. Debuting Proof of Existence today!</p>
   <p><b>03.19.2025</b> Now mostly mobile proof!</p>
   <p><b>03.16.2025</b> Putting together the basic framework of the site.</p>
 
   <h2>To do list</h2>
   <ul>
-    <li>Add table of contents sidebar to webnovel reader pages</li>
-    <li>Finish proofing website against mobile</li>
-    <li>Add dark/light mode support</li>
+    <li>Auto-generate description in meta tags</li>
+    <li>Add RSS feed</li>
+    <li>Add guestbook</li>
+    <li>And perhaps...more?</li>
   </ul>
 </InsectSplashLayout>
