QOL fix: nav z index, toggle label, comment link

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -10,7 +10,7 @@ const gitBookUrl = "https://skolomorphic.github.io" + pathName + '#comments';
         <p>Hi! If you'd like to share your thoughts or ask a question, you can email me at 
             <a>skolomorphic@protonmail.com</a>, visit me on <a href="http://skolomorphic.tumblr.com/">tumblr</a>, 
             or leave a comment below.</p>
-        <p>This webpage has a <a href={gitBookUrl}>Neocities mirror</a> and a <a href={gitBookUrl}>Github Books mirror</a>.</p>
+        <p>This webpage has a <a href={neocitiesUrl}>Neocities mirror</a> and a <a href={gitBookUrl}>Github Books mirror</a>.</p>
         <p>I look forward to hearing from you.</p>
         <p>Thanks for visiting my page!</p>
     </div>
