--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,6 +37,7 @@ const { collectionName, headingsName } = Astro.props;
     grid-template: 
         "toc logo links toggle"
         / fit-content(50px) minmax(100px, 1fr) minmax(500px, 80ch) minmax(100px, 1fr);
+    z-index: 1;
 }
 
 .mainlinkstoggle {
