fix rss feed and add chapter 4

--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -41,4 +41,7 @@ const arcOrganization = await getCollection('poeArcs');
         <li><a href=`./record-of-existence/`>Jeong Eunseok's Record of Existence</a></li>
         <li>More to be added as the story progresses...</li>
     </ul>
+
+    <h2>Other</h2>
+    <p>You can find the RSS feed for this webnovel <a href=`./poe-rss.xml`>here</a>. Feel free to drop a comment if you run into any issues.</p>
 </BookLayout>
