--- a/src/layouts/BookLayout.astro
+++ b/src/layouts/BookLayout.astro
@@ -15,7 +15,7 @@ const collection = collectionName ? collectionName : frontmatter.collectionName;
         import "../scripts/readerControls.js";
     </script>
     <div class="container">
-        { frontmatter.chapter != null && frontmatter.chapter > 0 && <div class="chapter-number">{frontmatter.chapter <= 10 && '0'}{frontmatter.chapter}.</div> }
+        { frontmatter.chapter != null && frontmatter.chapter > 0 && <div class="chapter-number">{frontmatter.chapter < 10 && '0'}{frontmatter.chapter}.</div> }
         <h1 class="chapter-title">{frontmatter.title}</h1>
         <div class="chapter-heading-end"></div>
         <div id="book-content">
