--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -35,7 +35,7 @@ const arcOrganization = await getCollection('poeArcs');
 
     <h2>Supplemental Material</h2>
     <ul>
-        <!-- <li><a href=`./character-appendix/`>Character Appendix</a></li> -->
+        <li><a href=`./character-appendix/`>Character Appendix</a></li>
         <!-- <li><a href=`./world-glossary/`>World Glossary</a></li> -->
         <li><a href=`./guide-to-lying/`>Jeong Eunseok's Guide to Lying Without Lying</a></li>
         <li><a href=`./record-of-existence/`>Jeong Eunseok's Record of Existence</a></li>
