--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -12,7 +12,7 @@ const arcOrganization = await getCollection('poeArcs');
 <BookLayout frontmatter={frontmatter}>
     <blockquote><i>In my dreams, everything was burning. A voice was calling out for me.</i></blockquote>
 
-    <p>Summoned forth as the intended sacrifice of a mysterious ritual, a young man finds himself in a new world with the face of his attempted killer, Acacius Duval, as well as a looming death curse if he doesn’t carry out Acacius’ last will. However, while Acacius has left many looming problems, he didn’t leave behind the most important piece: his memories. </p>
+    <p>Summoned forth as the intended sacrifice of a mysterious ritual, a young man finds himself in a new world with the face of his attempted killer, Acacius Duval, as well as a looming death curse if he doesn’t carry out Acacius’ last will. However, while Acacius has left many impending problems, he didn’t leave behind the most important piece: his memories. </p>
 
     <p>That would have been too convenient for navigating a world stitched together from apocalypses. </p>
 
