--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -12,7 +12,7 @@ let arcSet = new Set();
 chapters.map(c => arcSet.add(c.id.split("/").at(0)));
 
 let arcToChapters = new Map();
-arcSet.keys().toArray().forEach(arc => {
+arcSet.forEach(arc => {
     let arcChapters = chapters.filter(chapter => 
         chapter.id.includes(arc)
     );
