--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -69,7 +69,7 @@ arcList.sort();
         <li><a href=`./world-glossary/`>World Glossary</a></li>
         <li><a href=`./guide-to-lying/`>Jeong Eunseok's Guide to Lying Without Lying</a></li>
         <li><a href=`./record-of-existence/`>Jeong Eunseok's Record of Existence</a></li>
-        <li>More to be added as the story progresses...</li>
+        <li><a href=`./acacius-records/`>Acacius' Records</a></li>
     </ul>
 
     <h2>Other</h2>
