add tags link to index page

--- a/src/pages/proof-of-existence/index.astro
+++ b/src/pages/proof-of-existence/index.astro
@@ -73,5 +73,6 @@ arcList.sort();
     </ul>
 
     <h2>Other</h2>
+    <p><a href=`./tags/`>Browse chapters by tag here.</a></p>
     <p>You can find the RSS feed for this webnovel <a href=`./poe-rss.xml`>here</a>. Feel free to drop a comment if you run into any issues.</p>
 </BookLayout>
